# AsyncRequestManager

./: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: async_request_manager.podspec
ios/Classes/: AsyncRequestManagerPlugin.swift
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: async_request_manager.dart
lib/src/: async_manager.dart
macos/: .gitignore  async_request_manager.podspec
macos/Classes/: AsyncRequestManagerPlugin.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
test/: async_request_manager_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  async_request_manager_plugin.cpp  async_request_manager_plugin.h  async_request_manager_plugin_c_api.cpp
windows/include/async_request_manager/: async_request_manager_plugin_c_api.h
windows/runner/: Runner.rc  main.cpp
(+7 files in other folders)
